add index.html and css files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        <!-- All content goes here -->
        <div>
            <nav>
-                <h1>brashe474's webst</h1>
+                <h1>brashe474's website</h1>
            </nav>
   
            <main>
