--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
    <head>
        <title>brashe474's first webpage</title>
+       <linkrel="stylesheet" href="style.css"></linkrel>
+       </head>
    </head>
 
 
