add index.html and css files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
        <title>brashe474's first webpage</title>
-       <linkrel="stylesheet" href="style.css"></linkrel>
+       <link rel="stylesheet" href="style.css">
        </head>
    </head>
 
