--- a/index.html
+++ b/index.html
@@ -1,49 +1,59 @@
+
 <!DOCTYPE HTML>
 <html>
-   <head>
-       <title>brashe474's first webpage</title>
-       <link rel="stylesheet" href="style.css">
-       </head>
-   </head>
+  <head>
+      <title>brashe474's first webpage</title>
+      <link rel="stylesheet" href="style.css">
+  </head>
 
 
-   <body>
-       <!-- All content goes here -->
-       <div>
-           <nav>
-                <h1>brashe474's website</h1>
-           </nav>
-  
-           <main>
-         <!-- Sidebar section -->
-         <div>
-           <div>
-               <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQItnvXndZJaGm_YAGo_KK01qmLawL8CPqi3DBVVX_ECHDWOYVGeoAJRKPdPfeCMFcEbaU:https://pbs.twimg.com/ext_tw_video_thumb/1606841827155402753/pu/img/aHAPPEfbO-3iaPZC.jpg&usqp=CAU">
-               </div>
-         </div>
-  
-         <!-- Content section -->
-         <div>
-           <h2> </h2>
-           <p> i play football</p>
-           <!-- Content Section-->
-  <div>
-   <h2></h2>
-   <p></p>
-   <!-- Interests section -->
-   <div>
-       <h3>Interests</h3>
-       <ul>
-           <li>football</li>
-           <li>video games</li>
-           <li>comics</li>
-           <li>colledge</li>
-       </ul>
-   </div>
+
+
+  <body>
+     
+         <!-- All content goes here -->
+ <div id="all-contents">
 </div>
-         </div>
-           </main>
-       </div>
-   </body>
+      <div>
+          <nav>
+              <h1>Bobby Bouche</h1>
+              <ul>
+                  <li>
+                    <a href="index.html"> Home </a>
+                  </li>
+                  <li>
+                    <a href="portfolio.html"> Portfolio </a>
+                  </li>
+              </ul>
+          </nav>
+           <main>
+        <!-- Sidebar section -->
+        <div>
+          <div>
+              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQItnvXndZJaGm_YAGo_KK01qmLawL8CPqi3DBVVX_ECHDWOYVGeoAJRKPdPfeCMFcEbaU:https://pbs.twimg.com/ext_tw_video_thumb/1606841827155402753/pu/img/aHAPPEfbO-3iaPZC.jpg&usqp=CAU">
+              </div>
+        </div>
+         <!-- Content section -->
+        <div>
+          <h2> </h2>
+          <p> Student at st Michael High</p>
+ <div>
+  <!-- Interests section -->
+  <div>
+      <h3>Interests</h3>
+      <ul>
+        <li>football</li>
+        <li>video games</li>
+        <li>comics</li>
+        <li>colledge</li>
+      </ul>
+  </div>
+</div>
+        </div>
+          </main>
+      </div>
+  </body>
 </html>
+
+
 
